feat: Added a 'Recommended' tab in the library views for a library specific dashboard like the home page
